kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hocs-test-viewer
  name: hocs-test-viewer
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10443
  selector:
    name: hocs-test-viewer
