kube/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hocs-test-viewer-policy
spec:
  podSelector:
    matchLabels:
      name: hocs-test-viewer
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-internal
